--- a/pom.xml
+++ b/pom.xml
@@ -18,24 +18,19 @@
 	</build>
 
 	<dependencies>
-		<!-- <dependency>
-			<groupId>com.hi3project.vineyard.comm</groupId>
-			<artifactId>gozirra-ws</artifactId>
-			<version>0.5.0</version>
-		</dependency> -->
 		<dependency>
 			<groupId>org.java-websocket</groupId>
 			<artifactId>Java-WebSocket</artifactId>
 			<version>1.3.0</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>com.hynnet</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.1.3</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>log4j-over-slf4j</artifactId>
+			<artifactId>slf4j-api</artifactId>
 			<version>1.7.12</version>
 		</dependency>
 
