--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.hi3project.vineyard.comm</groupId>
+			<artifactId>gozirra-ws</artifactId>
+			<version>0.5.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.java-websocket</groupId>
 			<artifactId>Java-WebSocket</artifactId>
 			<version>1.3.0</version>
