--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.adrenalinee.stomp</groupId>
 	<artifactId>stomp-websocket-java-client</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0</version>
 
 	<build>
 		<plugins>
@@ -18,21 +18,24 @@
 	</build>
 
 	<dependencies>
-		<!-- <dependency>
-			<groupId>com.hi3project.vineyard.comm</groupId>
-			<artifactId>gozirra-ws</artifactId>
-			<version>0.5.0</version>
-		</dependency> -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.6.2</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.6.5</version>
+			<scope>provided</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.java-websocket</groupId>
 			<artifactId>Java-WebSocket</artifactId>
 			<version>1.3.0</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>com.hynnet</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.1.3</version>
-		</dependency> -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
